# spherical-radar-drone

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
iris/: iris.sdf
launch/: BAG_radar_power_follower.launch.py  spherical_radar.launch.py  spherical_radar_CFAR_test.launch.py  spherical_radar_HITL.launch.py  spherical_radar_SIM.launch.py  spherical_radar_TEST.launch.py  spherical_radar_VISUALIZE.launch.py
rviz/: spherical_radar.rviz
scripts/: analyze_powerlines.py  analyze_powerlines_CSV.py  height1_lines_cloud.csv  height2_lines_cloud.csv  height3_lines_cloud.csv  height4_lines_cloud.csv  height5_lines_cloud.csv  horizontal_error_array.csv  plot_3D_offboard_path.py  plot_density_dist_fits.py  plot_spread_dist_fits.py  plot_spreadanddensity_over_dist_fits.py  plot_variance_dist_fits.py  radar_data_listener.py  straight_power_lines_cloud.csv  travelled_distance_array.csv  vertical_error_array.csv  yaw_error_array.csv
src/: drone_frame_broadcaster_node.cpp  geometry.cpp  geometry.h  lidar_to_mmwave.cpp  offboard_control.cpp  pcl_angle.cpp  radar_pointcloud_combiner.cpp  radar_toggler.cpp  radar_zone_visualizer.cpp
urdf/: test.urdf
